Import polaris styles, add spacing between app cards, and fix card heights to 100%

--- a/src/App.css
+++ b/src/App.css
@@ -22,9 +22,14 @@ body {
   height: 100%;
 }
 
+#root {
+  height: 100%;
+}
+
 .grid {
   display: flex;
   flex-flow: column nowrap;
+  height: 100%;
 }
 
 .grid__header {
@@ -44,7 +49,13 @@ body {
 
 .app__preview {
   width: 45%;
+  margin: 0 1rem;
 }
 
-.app__settings {
+/* .app__settings {
+} */
+
+.grid .Polaris-Card {
+  height: 100%;
+  max-height: 100%;
 }
